Wed Sep 21 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.8

	* bootstrap: do not run autoheader

Fri Aug 26 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.7

	* pokerengine/pokerengineconfig.py (Config.upgrade): ignore
	  missing upgrade repository, as if it was empty, instead of crashing.

Tue Aug 16 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.6

	* debian/python2.3-poker-engine.postinst: run pokerconfigupgrade after
	  installation.

	* pokerconfigupgrade.8.in: new

	* pokerconfigupgrade.in: command line utility to upgrade configuration
	  files

Mon Aug 15 2005  Loic Dachary  <loic@gnu.org>

	* upgrades: repository of XSL sheets upgrading confgiruation files

	* tests/upgrades.py.in: apply all upgrades from the 1.0.5 files stored
	  in tests/conf

	* tests/conf: 1.0.5 configuration files from which upgrades can be
	  applied.
	
	* pokerengine/pokerengineconfig.py (Config.upgrade): XSL based upgrade system
	  starting from version 1.0.5 and up.

	* pokerengine/version.py.in: version class for comparison and
	  upgrade matrix helper

	* tests/*.py -> test/*.py.in: allow builds/tests in directory separated
	  from tests.
	
Wed Aug 03 2005  Loic Dachary  <loic@gnu.org>

	* pokerengine/pokergame.py (PokerGame.is{Ante,Blind}Requested): predicate
	  on the blind / ante status of a given player

Wed Aug 03 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.5

	* pokerengine/pokergame.py (PokerGame.getLatestPotContributions): helper
	  function added.

	* pokerengine/pokergame.py (PokerGame.updatePots): compute total pot
	  contributions.

	* pokerengine/pokergame.py (PokerGame.distributeMoney): compute total serial2share that
	  replaces winner2share and serial2delta for each player (net win/loss).

Sat Jul 16 2005  Loic Dachary  <loic@gnu.org>

	* debian/control (Section): s/libs/python/ in sections.

Wed Jul 13 2005  Loic Dachary  <loic@gnu.org>

	* Release 1.0.4

	* pokerengine/pokergame.py (PokerGame.sitOut): do not set the dealer