@@ -1,3 +1,0 @@
-debian/tmp/usr/lib/python@PYTHON_VERSION@
-debian/tmp/usr/sbin
-debian/tmp/usr/share
